# fileshare

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: ff31a6e15363_initialize_tables.py
backend/app/api/: dependencies.py  routers.py
backend/app/api/routes/: file.py  login.py  user.py
backend/app/cache/: core.py  file.py  user.py
backend/app/core/: config.py  security.py
backend/app/crud/: file.py  user.py
backend/app/database/: base.py  core.py
backend/app/models/: __init__.py  file.py  user.py
backend/app/schemas/: file.py  security.py  user.py  utils.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_file.py  test_login.py  test_user.py
backend/app/tests/cache/: test_file.py  test_user.py
backend/app/tests/core/: database.py
backend/app/tests/crud/: test_file.py  test_user.py
backend/app/tests/utils/: file.py  user.py  utils.py
frontend/: .env  Dockerfile  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: config.ts  index.tsx  routeTree.gen.ts  theme.tsx  utils.ts  vite-env.d.ts
frontend/src/client/: aws-config.ts  index.ts  models.ts  schemas.ts  services.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: _layout.tsx  login.tsx  recover-password.tsx  (+2 more)
localstack/: cors-config.json  init-storage.sh
nginx/: nginx.conf
(+26 files in other folders)
